apps/sonarqube/overlays/rpi-prod/patch-sonarqube-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarqube-sonarqube
  namespace: sonarqube
spec:
  template:
    spec:
      containers:
        - name: sonarqube
          image: docker.io/sonarqube:10.7.0-community@sha256:7c4cb78a7c5c5d0a5b1cfd7e7b77b54f42d233b6f289d3c9fbc93c80259dc7a5
