apps/sonarqube/overlays/rpi-prod/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: sonarqube
  loadBalancerIP: 10.0.40.91
